package steering_astar.Astar;

public  class Details {
    double value;
    double i;
    double j;

    public Details(double value, double i, double j) {
        this.value = value;
        this.i = i;
        this.j = j;
    }
}